objects/Account_Profile_Setting__c.object
<CustomObject>
    <fields>
        <fullName>EEL_Field__c</fullName>
        <label>EEL_Field</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Temperature__c</fullName>
        <label>Profile Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <label>Profile Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Profile Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Regional_Dispatch_Account_Profile_Setting</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional Dispatch</label>
        <queue>Regional_Dispatch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>account_queue_Account_Profile_Setting</fullName>
        <filterScope>Queue</filterScope>
        <label>account queue</label>
        <queue>account_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Account Profile Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Profile Settings</pluralLabel>
    <recordTypes>
        <fullName>APS1</fullName>
        <active>true</active>
        <label>APS1</label>
    </recordTypes>
    <recordTypes>
        <fullName>APS2</fullName>
        <active>true</active>
        <label>APS2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Temperature</fullName>
        <active>true</active>
        <errorConditionFormula>isPickval(Profile_Temperature__c,&apos;Red&apos;)</errorConditionFormula>
        <errorDisplayField>Profile_Temperature__c</errorDisplayField>
        <errorMessage>cannot be red</errorMessage>
    </validationRules>
</CustomObject>